--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ android:
 before_script:
   - git clone https://github.com/facebook/buck.git --branch master --depth=1 $HOME/buck
   - cd $HOME/buck ant
-  - $HOME/bin/buck --version
+  - $HOME/buck/bin/buck --version
 
 script:
   - $HOME/buck/bin/buck fetch //...
