--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ android:
 
 before_script:
   - git clone https://github.com/facebook/buck.git --branch master --depth=1 $HOME/buck
-  - cd $HOME/buck ant
+  - cd $HOME/buck && ant
   - $HOME/buck/bin/buck --version
 
 script:
