--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 os: linux
+sudo: true
 language: android
 android:
   components:
@@ -6,6 +7,7 @@ android:
     - android-26
 
 before_script:
+  - sudo apt-get install ant
   - git clone https://github.com/facebook/buck.git --branch master --depth=1 $HOME/buck
   - cd $HOME/buck && ant
   - $HOME/buck/bin/buck --version
