cd to build dir

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,6 @@ before_script:
   - $HOME/buck/bin/buck --version
 
 script:
+  - cd $TRAVIS_BUILD_DIR
   - $HOME/buck/bin/buck fetch //...
   - $HOME/buck/bin/buck build :soloader
